--- a/stile/stilo.css
+++ b/stile/stilo.css
@@ -3,38 +3,43 @@
   flex-direction: column;
   background-color: white;
   min-height: 100vh;
+  min-width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
   
 }
 
 .itempai {
   color: white;
   display: flex;
-  justify-content: end;
+
   background-color: #175DA3;
   height: 50px;
-  align-items: center;
-  margin: 0 0px 0 0px;
-  width: 1500px;
+  border-radius: 5px;
+  box-shadow: 1px 2px 3px #092944cb;
+  
+ 
+
+  
+  
 
 }
 
 .item {
-  background-color: #0B2F52;
+  text-shadow: 2px 2px 3px black;
   color: white;
   height: 50px;
   width: 150px;
-  
+  margin: 0 1px;
   text-align: center;
   line-height: 50px;
 
 }
 
 .text {
-  
-  
-  flex: 1 1 0;
 
-  width: 1000px;
+  flex: 1 1 0;
+  
   color: #1D74CC;
   margin-top: 40px;
 }
