--- a/stile/stilo.css
+++ b/stile/stilo.css
@@ -70,10 +70,10 @@ p {
 
   background-color: white;
 
-  border: 2px solid #175da386;
+  height: 100%;
   margin-top: 5px;
-  height: 300px;
-  box-shadow: 1px 1px 5px #023e73cc;
+  
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.274);
 }
 
 .lista-produtos {
@@ -105,9 +105,10 @@ p {
 
 .foto-produto {
   margin-right: 5px;
-
-  width: 200px;
+  width: 100%;
+  width: 300px;
   height: 200px;
+  padding: 10px;
 
 }
 
